Fix header underline length on mobile

--- a/src/assets/style/_about.scss
+++ b/src/assets/style/_about.scss
@@ -101,7 +101,7 @@
 		border-radius: 0;
 		.title {
 			&::after {
-				width: 13rem !important;
+				width: 18rem !important;
 				transform: translate(-0.2rem, 700%) !important;
 			}
 		}
