--- a/src/assets/style/_contact.scss
+++ b/src/assets/style/_contact.scss
@@ -201,7 +201,7 @@
 
 		.title {
 			&::after {
-				width: 9.5rem !important;
+				width: 18rem !important;
 				transform: translate(-0.2rem, 700%) !important;
 			}
 		}
