--- a/src/assets/style/_portfolio.scss
+++ b/src/assets/style/_portfolio.scss
@@ -100,7 +100,7 @@
 	.portfolio {
 		.title {
 			&::after {
-				width: 10.2rem !important;
+				width: 18rem !important;
 				transform: translate(-0.2rem, 700%) !important;
 			}
 		}
